# pico-bno055-rs

./: Cargo.toml  README.md
scripts/: debug-quaternion.py
src/: main.rs
