[package]
name = "pico-bno055-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.2"
rp-pico = "0.2.0"
cortex-m-rt = { version = "0.7" }
embedded-time = "0.12.0"
embedded-hal = "0.2.5"
panic-halt= "0.2.0"
usb-device= "0.2.8"
usbd-serial = "0.1.1"
bno055 = { git = "https://github.com/eupn/bno055.git" }
